src/components/Header/Header.scss
@import "../../styles/mixins.scss";
@import "../../styles/breakpoints.scss";
@import "../../styles/fonts.scss";

.header {
  padding: space(24) !important;
  position: relative;

  &--link {
    text-decoration: none;
  }

  @include for-tablet-down {
    justify-content: center !important;
    background-color: $light-grey;
  }

  @include for-tablet-large-up {
    margin-top: space(24);
    padding-bottom: space(40);
  }

  @include for-phone-only {
    &:after {
      position: absolute;
      content: "";
      width: 100%;
      height: 14px;
      background-image: url("../../assets/lines/Line1-grey-mobile.svg");
      background-repeat: no-repeat;
      background-size: 100%;
      bottom: -5px;
    }
  }

  &--logo-container {
    @include for-phone-only {
      text-align: center;
    }
  }

  &--logo {
    display: inline;

    svg {
      height: 53px;
      width: 156px;
    }

    &--square {
      height: 50px;
      width: 50px;
      margin-right: 20px;
    }
  }

  &--links {
    @include body-m-alt;
    color: $grey;
    margin-top: space(48);

    @include for-tablet-down {
      margin-top: space(32);
    }
  }

  &--icon {
    svg {
      color: $grey;
      height: 30px;
      margin-left: space(16);
      width: auto;
      vertical-align: middle;

      @include for-tablet-down {
        height: 20px;
        margin-left: space(8);
      }
    }
  }
}

.user-header {
  background: linear-gradient(270deg, #00a683 0%, #138b84 100%);
  padding: space(24) !important;
  position: relative;

  &:before {
    position: absolute;
    content: "";
    width: 100%;
    height: 14px;
    background-image: url("../../assets/lines/Line1-green.svg");
    background-repeat: no-repeat;
    background-size: 100%;
    bottom: -14px;
    left: 0;

    @include for-phone-only {
      background-image: url("../../assets/lines/Line1-green-mobile.svg");
    }
  }

  &--link {
    color: $white;

    svg {
      color: $white;
    }
  }
}

